// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot testing MarketCardContent Component renders correctly only statisticList 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-ohs0ip-MuiGrid-root"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-3 MuiGrid-grid-xs-12 css-1exgqav-MuiGrid-root"
  />
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-3 MuiGrid-grid-xs-12 css-1exgqav-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-8ngd37-MuiGrid-root"
    >
      <div
        className="hasIcon css-1simd7i"
      >
        WEEKLY
         
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
          />
        </svg>
      </div>
      <div
        className="css-947eac"
      >
        Yes
         
        95
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-8ngd37-MuiGrid-root"
    >
      <div
        className=" css-1simd7i"
      >
        VOLUME
         
      </div>
      <div
        className="css-1hy39v2"
      >
         
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot testing MarketCardContent Component renders correctly only tokenList 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-ohs0ip-MuiGrid-root"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-3 MuiGrid-grid-xs-12 css-1exgqav-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-8ngd37-MuiGrid-root"
    >
      <div
        className="css-1simd7i"
      >
        Yes
      </div>
      <div
        className="css-947eac"
      >
        14
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-8ngd37-MuiGrid-root"
    >
      <div
        className="css-1simd7i"
      >
        No
      </div>
      <div
        className="css-arphil"
      >
        5
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-3 MuiGrid-grid-xs-12 css-1exgqav-MuiGrid-root"
  />
</div>
`;

exports[`Snapshot testing MarketCardContent Component renders correctly with Props 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-ohs0ip-MuiGrid-root"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-3 MuiGrid-grid-xs-12 css-1exgqav-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-8ngd37-MuiGrid-root"
    >
      <div
        className="css-1simd7i"
      >
        Yes
      </div>
      <div
        className="css-947eac"
      >
        14
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-8ngd37-MuiGrid-root"
    >
      <div
        className="css-1simd7i"
      >
        No
      </div>
      <div
        className="css-arphil"
      >
        5
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-3 MuiGrid-grid-xs-12 css-1exgqav-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-8ngd37-MuiGrid-root"
    >
      <div
        className="hasIcon css-1simd7i"
      >
        WEEKLY
         
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
          />
        </svg>
      </div>
      <div
        className="css-947eac"
      >
        Yes
         
        95
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-8ngd37-MuiGrid-root"
    >
      <div
        className=" css-1simd7i"
      >
        VOLUME
         
      </div>
      <div
        className="css-1hy39v2"
      >
         
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot testing MarketCardContent Component renders correctly without Props 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-ohs0ip-MuiGrid-root"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-3 MuiGrid-grid-xs-12 css-1exgqav-MuiGrid-root"
  />
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-3 MuiGrid-grid-xs-12 css-1exgqav-MuiGrid-root"
  />
</div>
`;
